--- a/Problem_Set_3/diamonds.html
+++ b/Problem_Set_3/diamonds.html
@@ -60,6 +60,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <pre class="r"><code>library(ggplot2)</code></pre>
 <pre><code>## Warning: package 'ggplot2' was built under R version 3.1.3</code></pre>
+<pre class="r"><code>?diamonds</code></pre>
+<pre><code>## starting httpd help server ... done</code></pre>
 <pre class="r"><code>data(diamonds)
 str(diamonds)</code></pre>
 <pre><code>## 'data.frame':    53940 obs. of  10 variables:
@@ -117,7 +119,7 @@ str(diamonds)</code></pre>
 </div>
 <div id="what-letter-represents-the-best-color-for-a-diamong" class="section level2">
 <h2>What letter represents the best color for a diamong?</h2>
-<p>Answer: G</p>
+<p>Answer: D based on defination of ?diamonds (colour. diamond colour, from J (worst) to D (best))</p>
 <p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
 <p>You can also embed plots, for example:</p>
 <p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
